PDF scrolling with wheel gestures

Scroll gestures may be generated twice, as a plugin
may 'resend' them if not fully consumed by the plugin,
and they may be generated once again inside the main
renderer host. Re-sending of gesture scroll events from
the plugin causes double scroll values in PDFs
This was more noticable on Windows which uses a larger tick counter (120) vs
53 on Linux.

Fix is to not generate gestures inside the plugin container.

BUG=604734

Review URL: https://codereview.chromium.org/1898333002

Cr-Commit-Position: refs/heads/master@{#388508}

Former-commit-id: 874feac6c0e08aab52bd08fe33d5daee0ae07fa5